# django-central-sso-client

./: README.md  pyproject.toml
src/central_sso_client/: jwks.py  middleware.py  pkce.py  state.py  urls.py  views.py
src/central_sso_client/management/commands/: sso_register_client.py
src/django_central_sso_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_jwks_cache.py  test_pkce.py  test_state_nonce.py
